VM build without C1/C2 fails after JDK-8243205

XMLWordPrintable

    • b04
    • generic
    • generic

      using configure arguments '--with-boot-jdk=/mnt/share/openjdk/packages/boot-jdk/aarch64/master --with-debug-level=release --with-jvm-features=-compiler1 --with-gtest=/mnt/share/openjdk/tools/googletest'.Configuration summary:* Name: /home/haosun01/tmp/tmp/tmp/build-without-c1
      * Debug level: release
      * HS debug level: product
      * JVM variants: server
      * JVM features: server: 'aot cds compiler2 epsilongc g1gc graal jfr jni-check jvmci jvmti management nmt parallelgc serialgc services shenandoahgc vm-structs zgc'
      * OpenJDK target: OS: linux, CPU architecture: aarch64, address length: 64
      * Version string: 17-internal+0-adhoc.haosun01.jdksrc (17-internal)Tools summary:* Boot JDK: openjdk version "17-internal" 2021-09-14 OpenJDK Runtime Environment (build 17-internal+0-adhoc.alahay01.gerritjdk) OpenJDK 64-Bit Server VM (build 17-internal+0-adhoc.alahay01.gerritjdk, mixed mode, sharing) (at /mnt/share/openjdk/packages/boot-jdk/aarch64/master)
      * Toolchain: gcc (GNU Compiler Collection)
      * C Compiler: Version 10.2.0 (at /usr/bin/gcc)
      * C++ Compiler: Version 10.2.0 (at /usr/bin/g++)
      Build performance summary:
      * Cores to use: 125
      * Memory limit: 128821 MB

      Error msg:

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_jvmciCompilerToVMInit.o:
      /home/haosun01/tmp/tmp/tmp/jdk_src/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp: In function '_jobjectArray* readConfiguration0(JNIEnv*, JVMCIEnv*)':
      /home/haosun01/tmp/tmp/tmp/jdk_src/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:201:16: error: 'BootstrapJVMCI' was not declared in this scope
        201 | do_bool_flag(BootstrapJVMCI) \
            | ^~~~~~~~~~~~~~
      /home/haosun01/tmp/tmp/tmp/jdk_src/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:253:55: note: in definition of macro 'BOXED_BOOLEAN'
        253 | #define BOXED_BOOLEAN(name, value) name = ((jboolean)(value) ? boxedTrue : boxedFalse)
            | ^~~~~
      /home/haosun01/tmp/tmp/tmp/jdk_src/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:390:30: note: in expansion of macro 'ADD_FLAG'
        390 | #define ADD_BOOL_FLAG(name) ADD_FLAG(bool, name, BOXED_BOOLEAN)
            | ^~~~~~~~
      /home/haosun01/tmp/tmp/tmp/jdk_src/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:201:3: note: in expansion of macro 'ADD_BOOL_FLAG'
        201 | do_bool_flag(BootstrapJVMCI) \
            | ^~~~~~~~~~~~
      /home/haosun01/tmp/tmp/tmp/jdk_src/src/hotspot/share/jvmci/jvmciCompilerToVMInit.cpp:398:3: note: in expansion of macro 'PREDEFINED_CONFIG_FLAGS'
        398 | PREDEFINED_CONFIG_FLAGS(ADD_BOOL_FLAG, ADD_INTX_FLAG, ADD_UINTX_FLAG)
         ... (rest of output omitted)* All command lines available in /home/haosun01/tmp/tmp/tmp/build-without-c1/make-support/failure-logs.
      === End of repeated output ===




      using configure arguments '--with-boot-jdk=/mnt/share/openjdk/packages/boot-jdk/aarch64/master --with-debug-level=release --with-jvm-features=-compiler2 --with-gtest=/mnt/share/openjdk/tools/googletest'.Configuration summary:
      * Name: /home/haosun01/tmp/tmp/tmp/build-jvmci
      * Debug level: release
      * HS debug level: product
      * JVM variants: server
      * JVM features: server: 'aot cds compiler1 epsilongc g1gc graal jfr jni-check jvmci jvmti management nmt parallelgc serialgc services shenandoahgc vm-structs zgc'
      * OpenJDK target: OS: linux, CPU architecture: aarch64, address length: 64
      * Version string: 17-internal+0-adhoc.haosun01.jdksrc (17-internal)Tools summary:
      * Boot JDK: openjdk version "17-internal" 2021-09-14 OpenJDK Runtime Environment (build 17-internal+0-adhoc.alahay01.gerritjdk) OpenJDK 64-Bit Server VM (build 17-internal+0-adhoc.alahay01.gerritjdk, mixed mode, sharing) (at /mnt/share/openjdk/packages/boot-jdk/aarch64/master)
      * Toolchain: gcc (GNU Compiler Collection)
      * C Compiler: Version 10.2.0 (at /usr/bin/gcc)
      * C++ Compiler: Version 10.2.0 (at /usr/bin/g++)Build performance summary:
      * Cores to use: 125
      * Memory limit: 128821 MB

      === Output from failing command(s) repeated here ===
      * For target hotspot_variant-server_libjvm_objs_oopMap.o:
      /home/ent-user/ci-scripts/jdk_src/src/hotspot/share/compiler/oopMap.cpp: In static member function 'static void OopMapSet::all_do(const frame*, const RegisterMap*, OopClosure*, void (*)(oopDesc**, oopDesc**, OopClosure*), OopClosure*)':
      /home/ent-user/ci-scripts/jdk_src/src/hotspot/share/compiler/oopMap.cpp:279:11: error: 'UseJVMCICompiler' was not declared in this scope; did you mean 'UseCompiler'?
        279 | if (UseJVMCICompiler) {
            | ^~~~~~~~~~~~~~~~
            | UseCompiler* All command lines available in /home/ent-user/ci-scripts/build-release/make-support/failure-logs.
      === End of repeated output ===No indication of failed target found.
      Hint: Try searching the build log for '] Error'.
      Hint: See doc/building.html#troubleshooting for assistance.



            Assignee:
            Eric Liu
            Reporter:
            Eric Liu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: