8258856: VM build without C1/C2 fails after JDK-8243205

The declaration sites for JVM flags were changed by JDK-8243205 and the
subsequent JDK-8258074. As a result, undeclared identifier errors
occurred while building VM without compiler1 or compiler2 feature.

Making the corresponding header files included would fix it.